--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
       gtag("config", "G-E7RVNMFJVK");
     </script>
 
-    <title>AC Auto Buyers - We Buu Junk Cars</title>
+    <title>AC Auto Buyers - We Buy Junk Cars</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
