added the crawl tag

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="This is a website that buys junk cars. We buy junk cars from customers nationwide in the United States."
     />
+    <meta name="keywords" content="sell-junk-car, cash-for-car, sell-my-junk-car, sell my car, cash for cars, who buys junk cars, AC-Auto-Buyers, AC Auto Buyers,
+    Sell My Junk Car, sell-my-junk-car, how to sell junk car, how-to-sell-junk-car "></meta>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
