--- a/public/index.html
+++ b/public/index.html
@@ -25,19 +25,15 @@
       crossorigin="anonymous"
     />
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-E7RVNMFJVK"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-E7RVNMFJVK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-      gtag("config", "G-E7RVNMFJVK");
-    </script>
+  gtag('config', 'G-E7RVNMFJVK');
+</script>
 
     <title>AC Auto Buyers - We Buy Junk Cars</title>
   </head>
